fix navbar z-index

--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,24 +1,25 @@
 .navbar {
-	position: sticky;
-	top: 0;
-	background: var(--main-blue);
+  position: sticky;
+  top: 0;
+  background: var(--main-blue);
+  z-index: 9999;
 }
 
 .container {
-	margin: 0;
-	padding: 15px 30px;
-	display: flex;
-	flex-direction: row;
-	list-style-type: none;
-	justify-content: space-between;
+  margin: 0;
+  padding: 15px 30px;
+  display: flex;
+  flex-direction: row;
+  list-style-type: none;
+  justify-content: space-between;
 }
 
 .navbar-left {
-	display: flex;
-	justify-content: flex-start;
+  display: flex;
+  justify-content: flex-start;
 }
 
 .navbar-right {
-	display: flex;
-	flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
